--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/png" href="/Gemini_Generated_Image_kb9v7rkb9v7rkb9v.png" />
   </head>
 
   <body>
